# amerigo_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: SetPosition.msg
srv/: GetPosition.srv
